# romeo

./: Cargo.toml
decks/base/: black.csv  white.csv
decks/blue_box/: black.csv  white.csv
decks/green_box/: black.csv  white.csv
decks/red_box/: black.csv  white.csv
src/: main.rs
src/cah/: commands.rs  mod.rs
